test webpack build

--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "client": "concurrently \"npm:client:*\"",
     "build:server": "./node_modules/.bin/babel src --out-dir lib",
     "build:client": "webpack --env prod --env min",
-    "start": "npm run build:server && npm run build:client && node index.js"
+    "start": "npm run build:client && node index.js"
   },
   "repository": {
     "type": "git",
