--- a/package.json
+++ b/package.json
@@ -11,8 +11,8 @@
     "client:sass": "sass --watch './src/scss/index.scss' './public/index.css' --style compressed",
     "client:webpack": "webpack serve --config webpack.config.dev.js",
     "client": "concurrently \"npm:client:*\"",
-    "build:server": "./node_modules/.bin/babel src --out-dir lib",
-    "build:client": "webpack --env prod --env min",
+    "build:server": "npx babel src --out-dir lib",
+    "build:client": "npx webpack --env prod --env min",
     "start": "npm run build:client && node index.js"
   },
   "repository": {
