try again babel webpack

--- a/package.json
+++ b/package.json
@@ -11,9 +11,9 @@
     "client:sass": "sass --watch './src/scss/index.scss' './public/index.css' --style compressed",
     "client:webpack": "webpack serve --config webpack.config.dev.js",
     "client": "concurrently \"npm:client:*\"",
-    "build:server": "npx babel src --out-dir lib",
-    "build:client": "npx webpack --env prod --env min",
-    "start": "npm run build:client && node index.js"
+    "build:server": "./node_modules/.bin/babel src --out-dir lib",
+    "build:client": "./node_modules/.bin/webpack --env prod --env min",
+    "start": "npm run build:server && npm run build:client && node index.js"
   },
   "repository": {
     "type": "git",
