--- a/package.json
+++ b/package.json
@@ -12,7 +12,13 @@
     "client:webpack": "webpack serve --config webpack.config.dev.js",
     "client": "concurrently \"npm:client:*\"",
     "build": "./node_modules/.bin/babel src --out-dir lib && ./node_modules/.bin/webpack --env prod --env min",
-    "start": "node index.js"
+    "start": "node index.js",
+    "clear": "rimraf build",
+    "build:server": "webpack --config webpack.server.config.js",
+    "build:client": "webpack --config webpack.client.config.js",
+    "start:client": "webpack serve --config webpack.client.config.js",
+    "start:server": "node build/server/bundle.js",
+    "serve": "concurrently \"npm:start:*\" "
   },
   "repository": {
     "type": "git",
@@ -42,10 +48,14 @@
     "@babel/register": "^7.13.16",
     "babel-loader": "^8.2.2",
     "concurrently": "^6.1.0",
+    "css-loader": "^5.2.6",
     "html-webpack-plugin": "^5.3.1",
+    "mini-css-extract-plugin": "^1.6.0",
     "sass": "^1.34.0",
+    "style-loader": "^2.0.0",
     "webpack": "^5.37.1",
     "webpack-cli": "^4.7.0",
-    "webpack-dev-server": "^3.11.2"
+    "webpack-dev-server": "^3.11.2",
+    "webpack-node-externals": "^3.0.0"
   }
 }
