--- a/babel.config.json
+++ b/babel.config.json
@@ -5,6 +5,7 @@
     ],
     "plugins": [
         "react-hot-loader/babel",
-        "@babel/plugin-transform-arrow-functions"
+        "@babel/plugin-transform-arrow-functions",
+        "@loadable/babel-plugin"
     ]
 }
