--- a/package.json
+++ b/package.json
@@ -17,8 +17,9 @@
     "build:server": "webpack --config webpack.server.config.js",
     "build:client": "webpack --config webpack.client.config.js",
     "start:client": "webpack serve --config webpack.client.config.js",
-    "start:server": "node build/server/bundle.js",
-    "serve": "concurrently \"npm:start:*\" "
+    "start:server": "nodemon build/server/bundle.js",
+    "serve": "concurrently \"npm:start:*\" \"npm:build:server -- --watch\"",
+    "go": "npm run build:server && npm run build:client && npm run start:server"
   },
   "repository": {
     "type": "git",
@@ -32,12 +33,14 @@
   },
   "homepage": "https://github.com/codingno/reactjs-ssr#readme",
   "dependencies": {
+    "@loadable/component": "^5.15.0",
+    "@loadable/server": "^5.15.0",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-hot-loader": "^4.13.0",
-    "react-router": "^5.2.0",
+    "react-router-dom": "^5.2.0",
     "redux": "^4.1.0"
   },
   "devDependencies": {
@@ -46,6 +49,8 @@
     "@babel/preset-env": "^7.14.2",
     "@babel/preset-react": "^7.13.13",
     "@babel/register": "^7.13.16",
+    "@loadable/babel-plugin": "^5.13.2",
+    "@loadable/webpack-plugin": "^5.15.0",
     "babel-loader": "^8.2.2",
     "concurrently": "^6.1.0",
     "css-loader": "^5.2.6",
@@ -54,6 +59,7 @@
     "sass": "^1.34.0",
     "style-loader": "^2.0.0",
     "webpack": "^5.37.1",
+    "webpack-bundle-analyzer": "^4.4.2",
     "webpack-cli": "^4.7.0",
     "webpack-dev-server": "^3.11.2",
     "webpack-node-externals": "^3.0.0"
