--- a/package.json
+++ b/package.json
@@ -15,11 +15,18 @@
     "start": "node index.js",
     "clear": "rimraf build",
     "build:server": "webpack --config webpack.server.config.js",
+    "build:serve": "webpack --config webpack.server.config.js --watch",
     "build:client": "webpack --config webpack.client.config.js",
-    "start:client": "webpack serve --config webpack.client.config.js",
-    "start:server": "nodemon build/server/bundle.js",
-    "serve": "concurrently \"npm:start:*\" \"npm:build:server -- --watch\"",
+    "build:analyze": "webpack --config webpack.client.config.analyze.js",
+    "serve:client": "webpack serve --config webpack.client.config.js",
+    "start:server": "node build/server/bundle.js",
+    "serve:server": "nodemon build/server/bundle.js",
+    "serve": "concurrently \"npm:serve:*\" \"npm:build:serve\"",
     "go": "npm run build:server && npm run build:client && npm run start:server"
+  },
+  "browser": {
+    "fs": false,
+    "path": false
   },
   "repository": {
     "type": "git",
@@ -33,30 +40,48 @@
   },
   "homepage": "https://github.com/codingno/reactjs-ssr#readme",
   "dependencies": {
+    "@babel/polyfill": "^7.12.1",
+    "@hot-loader/react-dom": "^17.0.1",
     "@loadable/component": "^5.15.0",
     "@loadable/server": "^5.15.0",
+    "@material-ui/core": "^4.11.4",
+    "axios": "^0.21.1",
+    "clsx": "^1.1.1",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
+    "react": "^17.0.1",
+    "react-dom": "^17.0.1",
     "react-hot-loader": "^4.13.0",
+    "react-lazy-load-image-component": "^1.5.1",
+    "react-number-format": "^4.6.0",
+    "react-redux": "^7.2.4",
     "react-router-dom": "^5.2.0",
-    "redux": "^4.1.0"
+    "react-virtualized-auto-sizer": "^1.0.5",
+    "react-window": "^1.8.6",
+    "react-window-scroller": "^1.0.10",
+    "redux": "^4.1.0",
+    "redux-thunk": "^2.3.0",
+    "socket.io": "^4.1.2"
   },
   "devDependencies": {
     "@babel/cli": "^7.14.3",
     "@babel/core": "^7.14.3",
+    "@babel/plugin-syntax-dynamic-import": "^7.8.3",
     "@babel/preset-env": "^7.14.2",
     "@babel/preset-react": "^7.13.13",
     "@babel/register": "^7.13.16",
     "@loadable/babel-plugin": "^5.13.2",
     "@loadable/webpack-plugin": "^5.15.0",
     "babel-loader": "^8.2.2",
+    "babel-plugin-dynamic-import-webpack": "^1.1.0",
+    "babel-plugin-syntax-dynamic-import": "^6.18.0",
     "concurrently": "^6.1.0",
     "css-loader": "^5.2.6",
+    "dotenv-webpack": "^7.0.3",
     "html-webpack-plugin": "^5.3.1",
     "mini-css-extract-plugin": "^1.6.0",
     "sass": "^1.34.0",
+    "sass-loader": "^12.0.0",
     "style-loader": "^2.0.0",
     "webpack": "^5.37.1",
     "webpack-bundle-analyzer": "^4.4.2",
